--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -39,9 +39,8 @@
 
           <article class="post featured">
             <header class="major">
-              <h2><a href="#">Importance of Blogs</a></h2>
-              <p>Blogs are really pretty awesome things. For one, they are a means to continually provide fresh,
-                dynamic content to your users. Also, they help your site get indexed and build authority as they are essential for SEO!
+              <h2><a href="#">My Projects</a></h2>
+              <p>Thanks for visiting my Github page! My various projects are listed below. 
 							</p>
             </header>
 						<p>
