--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,7 @@
 
 						<ul class="icons">
               <li><a href="https://www.linkedin.com/in/ezekielkuang/{{site.linkedin}}" class="icon fa-linkedin" rel="nofollow"><span class="label">LinkedIn</span></a></li>
-              <li><a href="https://github.com/ekbq/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+              <li><a href="https://github.com/ekbq/" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
