--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -35,7 +35,7 @@
       <h3>Social</h3>
       <ul class="icons alt">
         <li><a href="https://www.linkedin.com/in/ezekielkuang/{{site.linkedin}}" class="icon fa-linkedin" rel="nofollow"><span class="label">LinkedIn</span></a></li>
-              <li><a href="https://github.com/ekbq/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+              <li><a href="https://github.com/ekbq/" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
       </ul>
     </section>
   </section>
